--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -17,4 +17,6 @@
     <string name="know_more">En savoir plus</string>
     <string name="search_bar">Rechercher un jeu...</string>
     <string name="best_sales">Les meilleures ventes</string>
+    <string name="send_password">Renvoyer mon mdp</string>
+    <string name="forgot_password_description">Veuillez saisir votre email afin de réinitialiser votre mot de passe</string>
 </resources>
