--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="search_header">Search</string>
     <string name="result_search">Number of results :</string>
     <string name="loading">Loading</string>
+    <string name="price">"Price : "</string>
 </resources>
